[package]
name = "medup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
utf8_slice = "1.0.0"
tinytemplate = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
clap = "4.0.32"
regex = "1.7.1"
lazy_static = "1.4.0"
url = "2.3.1"
email_address = "0.2.4"
serde_json = "1.0.91"